--- a/HTML/client.html
+++ b/HTML/client.html
@@ -72,6 +72,8 @@
          </div>
     </template>
     <template class="page" id="todo_list">
+        <button>Logout</button>
+
         <div id="todo_list_div">
           <div class="navbar">
             <nav>
