--- a/HTML/client.html
+++ b/HTML/client.html
@@ -82,11 +82,11 @@
         </div>
       </template>
       
-      <script  type="text/javascript" src="/JS/Client.js"></script> 
-      <script  type="text/javascript" src="/JS/FXMLHttpRequest.js"></script> 
-      <script  type="text/javascript" src="/JS/network.js"></script> 
-      <script  type="text/javascript" src="/JS/Server.js"></script>
-      <script  type="text/javascript" src="/JS/DB_API.js"></script>       
+      <script  type="text/javascript" src="../JS/Client.js"></script> 
+      <script  type="text/javascript" src="../JS/FXMLHttpRequest.js"></script> 
+      <script  type="text/javascript" src="../JS/network.js"></script> 
+      <script  type="text/javascript" src="../JS/Server.js"></script>
+      <script  type="text/javascript" src="../JS/DB_API.js"></script>       
        
 </body>
 </html>
