--- a/HTML/client.html
+++ b/HTML/client.html
@@ -61,14 +61,14 @@
                          </div>
     
                         <div class="group">
-                            <button  type="submit" onclick="sign_up_input(); signUp_toDo()">Sign Up</button>
+                            <button  type="submit" onclick="sign_up_input()">Sign Up</button>
                         <br>         
                 </form>
          </div>
     </template>
 
     <template id="todo_list">
-        <div id="todo_list_div"> 
+        <div id="todo_list_div" class="todo-background"> 
         <button id="logout_btn" onclick="LogOut_func()">Logout</button>
         <span style="margin-right: 10px;"></span>
         <input type="text" id="searchInput" placeholder="search..." onkeypress="handleKeyPress(event)">
